Fully Ported to 1.19.3
-Patched major bugs to 1.19.3
-Patched minor bugs
-Tomorow the release of 0.7.1a